--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="about">
         <![CDATA[
         <big><b>Adivinador</b></big>
-        <br><b>Versión: 1.3.0</b>
+        <br><b>Versión: 1.3.1</b>
         <br><br>2014-2018 Memoeslink Futura
         <br><small>Guillermo Almaguer (memoeslink)</small>
         <br><small>memocad@gmail.com</small>
@@ -557,6 +557,7 @@
         <item>Una persona de signo {string:astrological_sign} te afectará {rand:negativamente; positivamente} en {string:divination_middle}.</item>
         <item>Estás en un momento en el que debes tomar decisiones {rand:∅; críticas; apresuradas; importantes; bien pensadas; necesarias; esenciales} sobre {string:divination_middle}.</item>
         <item>En este momento otros te perciben como una persona｢2｣ ⸠string:personality_trait⸻2⸡.</item>
+        <item>{string:foreboding_start} {string:foreboding_end}</item>
     </string-array>
     <string-array name="divination_appendix">
         <item>Algunas cosas, relacionadas con esta adivinación, son:</item>
@@ -696,8 +697,10 @@
         <item>tu legado o herencia｢1｣</item>
         <item>˧˟ tus planes｢1｣</item>
         <item>˧˟ tus necesidades fisiológicas｢2｣</item>
+        <item>˧˟ tus ganas de hacer algo｢2｣</item>
         <item>tu tiempo｢1｣</item>
         <item>tu autorrealización｢1｣</item>
+        <item>tu motivación｢1｣</item>
     </string-array>
     <string-array name="divination_start">
         <item>Dentro de ‽1 días (‽2)</item>
@@ -755,6 +758,9 @@
         <item>En cualquier momento</item>
         <item>Dentro de poco</item>
         <item>Cuando menos te lo esperes</item>
+        <item>En el periodo actual</item>
+        <item>En el presente</item>
+        <item>En el momento actual</item>
     </string-array>
     <string-array name="element">
         <item>\?</item>
@@ -851,6 +857,32 @@
         <item>causas desconocidas</item>
         <item>influencias divinas o de fuerzas superiores</item>
         <item>lo oculto</item>
+    </string-array>
+    <string-array name="foreboding_end">
+        <item>{rand:∅; no} pasará.</item>
+        <item>{rand:∅; no} va a pasar.</item>
+        <item>{rand:∅; no} podrá suceder.</item>
+        <item>podría {rand:∅; no} pasar.</item>
+        <item>podría {rand:∅; no} volverse realidad.</item>
+        <item>es {rand:posible; imposible}.</item>
+        <item>{rand:∅; no} es factible.</item>
+        <item>es {rand:real; ilusorio}.</item>
+        <item>{rand:∅; no} tiene sentido.</item>
+    </string-array>
+    <string-array name="foreboding_start">
+        <item>Lo que crees que {rand:∅; no} pasará,</item>
+        <item>Eso que piensas</item>
+        <item>Sí, eso en lo que piensas,</item>
+        <item>Lo que has soñado</item>
+        <item>Lo que {rand:∅; no} deseas</item>
+        <item>Lo que {rand:∅; no} esperas</item>
+        <item>Lo que {rand:∅; no} has visualizado</item>
+        <item>Lo que {rand:∅; no} has contemplado</item>
+        <item>Eso que {rand:∅; no} has imaginado</item>
+        <item>Lo que {rand:más; menos} esperas</item>
+        <item>Todo lo que piensas</item>
+        <item>Nada de lo que piensas</item>
+        <item>Lo que presientes</item>
     </string-array>
     <string-array name="fortune_teller_aspect">
         <item>Bola de cristal</item>
