--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,7 +3,7 @@
     <string name="about">
         <![CDATA[
         <big><b>Adivinador</b></big>
-        <br><b>Version: 1.3.2</b>
+        <br><b>Version: 1.3.3</b>
         <br><br>2014-2018 Memoeslink Futura
         <br><small>Guillermo Almaguer (memoeslink)</small>
         <br><small>memocad@gmail.com</small>
@@ -615,6 +615,7 @@
         <item>will change.</item>
         <item>will change totally.</item>
         <item>will change inversely.</item>
+        <item>will be reverted.</item>
         <item>will be as before.</item>
         <item>won\'t be as before.</item>
         <item>will be seriously damaged.</item>
@@ -623,6 +624,10 @@
         <item>will be boosted or rise.</item>
         <item>will bring solutions or wellness to other people.</item>
         <item>will cause troubles or harm to other people.</item>
+        <item>will fade into the background.</item>
+        <item>will come to the fore.</item>
+        <item>will come to light.</item>
+        <item>will be revealed.</item>
         <item>will be regained.</item>
         <item>will be lost.</item>
         <item>will return.</item>
@@ -643,6 +648,7 @@
         <item>your {rand:health; health condition}</item>
         <item>your financial situation</item>
         <item>your love situation</item>
+        <item>your {rand:sexuality; sex life}</item>
         <item>your {rand:relationships; interpersonal relationships}</item>
         <item>your {rand:love affairs; love relationships}</item>
         <item>your {rand:finances; wealth; financial resources; financial gains}</item>
@@ -672,10 +678,13 @@
         <item>your luck</item>
         <item>your feelings</item>
         <item>your senses</item>
+        <item>your personality</item>
         <item>your harmony</item>
         <item>the equilibrium of your home</item>
+        <item>the dependence from, or on, other people</item>
         <item>your self-esteem</item>
         <item>your {rand:mood; state of mind}</item>
+        <item>your {rand:character; idiosyncrasy; temper}</item>
         <item>your charisma</item>
         <item>your {rand:might; authority; dominion; influence on others}</item>
         <item>your comfort zone</item>
@@ -690,15 +699,17 @@
         <item>your {rand:relevance; importance}</item>
         <item>your {rand:vigor; strength; physical condition}</item>
         <item>your {rand:stimuli; sources of pleasure}</item>
-        <item>the achievement of objectives in {rand:∅; projects; couple relationships; friendships or family relationships; business; school or work; agreements, pacts, or resolutions}</item>
+        <item>the achievement of objectives {rand:∅; in projects; in couple relationships; in friendships or family relationships; in business; in school or work; in agreements, pacts, or resolutions}</item>
         <item>your success</item>
         <item>your {rand:wishes; expectations; dreams; ambitions}</item>
         <item>your passions</item>
+        <item>your talents</item>
         <item>your legacy or inheritance</item>
         <item>your plans</item>
         <item>your physiological needs</item>
         <item>your willingness to do something</item>
         <item>your time</item>
+        <item>your privacy</item>
         <item>your self-actualization</item>
         <item>your motivation</item>
     </string-array>
@@ -852,6 +863,7 @@
         <item>unexplainable events</item>
         <item>rumors</item>
         <item>your thoughts</item>
+        <item>your imagination</item>
         <item>others\' situation</item>
         <item>a conflict</item>
         <item>unknown reasons</item>
@@ -915,9 +927,13 @@
         <item>an infant</item>
         <item>an adult</item>
         <item>a teenager</item>
+        <item>a younger person</item>
+        <item>an older person</item>
+        <item>a person of the same age</item>
         <item>a person of legal age</item>
         <item>a minor</item>
         <item>a baby</item>
+        <item>a newborn</item>
         <item>a prepubescent</item>
         <item>an elderly [man,woman]</item>
     </string-array>
