--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="about">
         <![CDATA[
         <big><b>Adivinador</b></big>
-        <br><b>Versión: 1.3.2</b>
+        <br><b>Versión: 1.3.3</b>
         <br><br>2014-2018 Memoeslink Futura
         <br><small>Guillermo Almaguer (memoeslink)</small>
         <br><small>memocad@gmail.com</small>
@@ -617,6 +617,7 @@
         <item>cambiará¦n¦.</item>
         <item>cambiará¦n¦ totalmente.</item>
         <item>cambiará¦n¦ a la inversa.</item>
+        <item>se revertirá¦n¦.</item>
         <item>volverá¦n¦ a ser como antes.</item>
         <item>no será¦n¦ como antes.</item>
         <item>se verá¦n¦ seriamente {perjudicad[o,a]⸻＃}¦s¦.</item>
@@ -625,6 +626,10 @@
         <item>será¦n¦ {potenciad[o,a]⸻＃}¦s¦ o crecerá¦n¦.</item>
         <item>traerá¦n¦ soluciones o bienestar a otras personas.</item>
         <item>causará¦n¦ problemas o perjuicios a otras personas.</item>
+        <item>pasará¦n¦ a segundo plano.</item>
+        <item>pasará¦n¦ a primer plano.</item>
+        <item>saldrá¦n¦ a la luz.</item>
+        <item>será¦n¦ {revelad[o,a]⸻＃}¦s¦.</item>
         <item>será¦n¦ {recuperad[o,a]⸻＃}¦s¦.</item>
         <item>se perderá¦n¦.</item>
         <item>regresará¦n¦.</item>
@@ -645,6 +650,7 @@
         <item>tu {rand:salud｢2｣; estado de salud｢1｣}</item>
         <item>tu situación financiera｢2｣</item>
         <item>tu situación amorosa｢2｣</item>
+        <item>tu {rand:sexualidad｢2｣; vida sexual｢2｣}</item>
         <item>˧˟ tus {rand:relaciones｢2｣; relaciones interpersonales｢2｣}</item>
         <item>˧˟ tus {rand:amoríos｢1｣; relaciones amorosas｢2｣}</item>
         <item>˧˟ tus {rand:finanzas｢2｣; riquezas｢2｣; recursos financieros｢1｣; ganancias financieras｢2｣}</item>
@@ -674,10 +680,13 @@
         <item>tu suerte｢2｣</item>
         <item>˧˟ tus emociones｢2｣</item>
         <item>˧˟ tus sentidos｢1｣</item>
+        <item>tu personalidad｢2｣</item>
         <item>tu armonía｢2｣</item>
         <item>el equilibrio de tu hogar｢1｣</item>
+        <item>la dependencia｢2｣ de, o hacia, otras personas</item>
         <item>tu autoestima｢2｣</item>
         <item>tu {rand:humor｢1｣; estado de ánimo｢1｣}</item>
+        <item>tu {rand:carácter｢1｣; idiosincracia｢2｣; temperamento｢1｣}</item>
         <item>tu carisma｢1｣</item>
         <item>tu {rand:poder｢1｣; autoridad｢2｣; dominio｢1｣; influencia sobre otros｢2｣}</item>
         <item>tu zona de confort｢2｣</item>
@@ -692,15 +701,17 @@
         <item>tu {rand:relevancia｢2｣; importancia｢2｣}</item>
         <item>tu {rand:vigor｢1｣; fuerza｢2｣; condición física｢2｣}</item>
         <item>˧˟ tus {rand:estímulos｢1｣; fuentes de placer｢2｣}</item>
-        <item>la consecución de objetivos｢2｣ en {rand:∅; los proyectos; las relaciones de pareja; las amistades o relaciones familiares; los negocios; los estudios o el trabajo; los acuerdos, pactos, o resoluciones}</item>
+        <item>la consecución de objetivos｢2｣ {rand:∅; en los proyectos; en las relaciones de pareja; en las amistades o relaciones familiares; en los negocios; en los estudios o el trabajo; en los acuerdos, pactos, o resoluciones}</item>
         <item>tu éxito｢1｣</item>
         <item>˧˟ tus {rand:deseos｢1｣; expectativas｢2｣; sueños｢1｣; ambiciones｢2｣}</item>
         <item>˧˟ tus pasiones｢2｣</item>
+        <item>˧˟ tus talentos</item>
         <item>tu legado o herencia｢1｣</item>
         <item>˧˟ tus planes｢1｣</item>
         <item>˧˟ tus necesidades fisiológicas｢2｣</item>
         <item>˧˟ tus ganas de hacer algo｢2｣</item>
         <item>tu tiempo｢1｣</item>
+        <item>tu privacidad｢2｣</item>
         <item>tu autorrealización｢1｣</item>
         <item>tu motivación｢1｣</item>
     </string-array>
@@ -854,6 +865,7 @@
         <item>sucesos inexplicables</item>
         <item>rumores</item>
         <item>tus pensamientos</item>
+        <item>tu imaginación</item>
         <item>la situación de otros</item>
         <item>un conflicto</item>
         <item>causas desconocidas</item>
@@ -917,9 +929,13 @@
         <item>un[,a]|infante</item>
         <item>un[,a]|adult[o,a]</item>
         <item>un[,a]|adolescente</item>
+        <item>una persona de menor edad</item>
+        <item>una persona de mayor edad</item>
+        <item>una persona de la misma edad</item>
         <item>una persona mayor de edad</item>
         <item>un[,a]|menor de edad</item>
         <item>un[,a]|bebé</item>
+        <item>un[,a]|recién|nacid[o,a]</item>
         <item>un[,a]|preadolescente</item>
         <item>un[,a]|ancian[o,a]</item>
     </string-array>
