--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="about">
         <![CDATA[
         <big><b>Adivinador</b></big>
-        <br><b>Versión: 1.3.6</b>
+        <br><b>Versión: 1.3.7</b>
         <br><br>2014-2018 Memoeslink Futura
         <br><small>Guillermo Almaguer (memoeslink)</small>
         <br><small>memocad@gmail.com</small>
@@ -701,7 +701,7 @@
         <item>˧˟ tus asociaciones｢2｣</item>
         <item>tu {rand:estatus social｢1｣; posición social｢2｣}</item>
         <item>tu {rand:relevancia｢2｣; importancia｢2｣}</item>
-        <item>tu {rand:vigor｢1｣; fuerza｢2｣; condición física｢2｣}</item>
+        <item>tu {rand:vigor｢1｣; fuerza｢2｣; condición física｢2｣; energía｢2｣}</item>
         <item>˧˟ tus {rand:estímulos｢1｣; fuentes de placer｢2｣}</item>
         <item>tu éxito｢1｣</item>
         <item>˧˟ tus {rand:deseos｢1｣; expectativas｢2｣; sueños｢1｣; ambiciones｢2｣}</item>
