--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="about">
         <![CDATA[
         <big><b>Adivinador</b></big>
-        <br><b>Versión: 1.5.0</b>
+        <br><b>Versión: 1.5.1</b>
         <br><br>2014-2018 Memoeslink Futura
         <br><small>Guillermo Almaguer (memoeslink)</small>
         <br><small>memocad@gmail.com</small>
@@ -273,7 +273,7 @@
     <string name="toast_clipboard">Texto copiado a portapapeles.</string>
     <string name="toast_enquiry_not_saved">No se pudo guardar la consulta.</string>
     <string name="toast_enquiry_saved">Se ha guardado la consulta con éxito.</string>
-    <string name="toast_unavailable_voices">No hay ningún idioma disponible para voces en tu dispositivo.</string>
+    <string name="toast_voice_unavailability">No hay ningún idioma disponible para voces en tu dispositivo.</string>
     <string name="today">hoy</string>
     <string-array name="animal">
         <item>abeja</item>
@@ -1074,7 +1074,7 @@
         <item>Español</item>
         <item>Inglés</item>
     </string-array>
-    <string-array name="months">
+    <string-array name="month">
         <item>enero</item>
         <item>febrero</item>
         <item>marzo</item>
@@ -1087,6 +1087,20 @@
         <item>octubre</item>
         <item>noviembre</item>
         <item>diciembre</item>
+    </string-array>
+    <string-array name="month_short">
+        <item>ENE</item>
+        <item>FEB</item>
+        <item>MAR</item>
+        <item>ABR</item>
+        <item>MAY</item>
+        <item>JUN</item>
+        <item>JUL</item>
+        <item>AGO</item>
+        <item>SEP</item>
+        <item>OCT</item>
+        <item>NOV</item>
+        <item>DIC</item>
     </string-array>
     <string-array name="name_type_options">
         <item>Sin nombre</item>
@@ -1690,20 +1704,6 @@
         <item>Plutón</item>
         <item>Júpiter</item>
         <item>Saturno</item>
-    </string-array>
-    <string-array name="short_months">
-        <item>ENE</item>
-        <item>FEB</item>
-        <item>MAR</item>
-        <item>ABR</item>
-        <item>MAY</item>
-        <item>JUN</item>
-        <item>JUL</item>
-        <item>AGO</item>
-        <item>SEP</item>
-        <item>OCT</item>
-        <item>NOV</item>
-        <item>DIC</item>
     </string-array>
     <string-array name="text_type">
         <item>Leer frases del adivinador</item>
